# taro

./: .gitignore  CLAUDE.md  LICENSE  README.md  docker-compose.yml
clients/python/: .dockerignore  Dockerfile  README.md  pyproject.toml
clients/python/examples/: iris_sklearn.py  validate_m3.py  yolo_quickstart.py
clients/python/taro/: __init__.py  __main__.py  _batch.py  _client.py  cli.py  run.py
clients/python/taro/integrations/: __init__.py  ultralytics.py
clients/python/tests/: conftest.py  test_batcher.py  test_cli.py  test_integration.py  test_lifecycle.py  test_never_crash.py
docs/: airflow-integration.md  architecture.md  poc-design.md  quickstart.md
scripts/: validate_yolo_adapter.py
server/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md
server/migrations/: 0001_init.sql  0002_documents.sql
server/migrations_pg/: 0001_init.sql  0002_documents.sql
server/src/: auth.rs  blob.rs  config.rs  db.rs  error.rs  lib.rs  main.rs  models.rs  repo.rs  state.rs  store.rs
server/src/api/: artifacts.rs  curves.rs  documents.rs  experiments.rs  health.rs  metrics.rs  mod.rs  runs.rs
server/tests/: artifacts.rs  auth.rs  curves.rs  documents.rs  lifecycle.rs  metrics.rs
server/tests/common/: mod.rs
website/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
website/docs/: intro.md
website/src/components/HomepageFeatures/: index.tsx
website/src/pages/: index.tsx
