[package]
name = "taro-server"
version = "0.1.0"
edition = "2021"
description = "Taro — curve-native experiment tracker (POC server)"

[[bin]]
name = "taro-server"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", features = ["multipart"] }
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros", "migrate"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v7"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.6", features = ["trace"] }
