[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "taro"
version = "0.1.0"
description = "Taro experiment tracker — curve-native Python SDK"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
dependencies = []  # POC core is standard-library only

[tool.setuptools.packages.find]
where = ["."]
include = ["taro*"]
